Update the existing prototype of AgriTrace (Blockchain-based Agricultura

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,12 +17,9 @@
   "harvest_location": "Harvest Location",
   "harvest_location_placeholder": "e.g., Salinas, CA",
   "harvest_date": "Harvest Date",
-  "quality_grade": "Quality Grade",
+  "quality_grade": "Initial Quality Grade",
   "quality_grade_placeholder": "e.g., Grade A, Premium",
   "create_batch": "Create Batch",
-  "create_with_ai_assistant": "Create with AI Assistant",
-  "ai_assistant": "AI Assistant",
-  "assistant_coming_soon": "Voice assistant coming soon...",
   "my_batches": "My Batches",
   "my_batches_description": "A list of all produce batches you have created.",
   "no_batches_created_yet": "No batches created yet.",
@@ -35,11 +32,19 @@
   "error": "Error",
   "success": "Success",
   "new_batch_created_successfully": "New batch created successfully!",
-  "claim_batch": "Claim Batch",
-  "claim_batch_description": "Enter a batch ID to claim it from a farmer.",
+  "claim_batch_and_generate_receipt": "Claim Batch & Generate Receipt",
+  "claim_batch_receipt_description": "Enter a batch ID and transport details to claim it and generate a digital receipt.",
+  "batch_id": "Batch ID",
   "enter_batch_id_placeholder": "Enter Batch ID...",
-  "claim": "Claim",
-  "batch_claimed_successfully": "Batch claimed successfully!",
+  "transport_details": "Transport Details",
+  "transport_mode": "Transport Mode",
+  "e_g_truck_train": "e.g., Truck, Train",
+  "vehicle_number": "Vehicle Number",
+  "e_g_ca_1234_xy": "e.g., CA-1234-XY",
+  "driver_name": "Driver's Name",
+  "e_g_john_smith": "e.g., John Smith",
+  "claim_and_generate": "Claim & Generate",
+  "batch_claimed_successfully": "Batch claimed successfully and receipt generated!",
   "my_inventory": "My Inventory",
   "my_inventory_description_distributor": "Batches you currently have in transit.",
   "no_batches_in_inventory": "No batches in your inventory.",
@@ -66,10 +71,10 @@
   "supply_chain_journey": "Supply Chain Journey",
   "current_status": "Current Status",
   "verification": "Verification",
-  "blockchain_hash": "Blockchain Hash",
+  "blockchain_hash": "Batch Metadata Hash",
   "harvested_by": "Harvested by",
   "location": "Location",
-  "quality": "Quality",
+  "quality": "Quality Grade",
   "transferred_to": "Transferred to",
   "handled_by": "Handled by",
   "date": "Date",
@@ -78,6 +83,33 @@
   "price_set_on": "Price set on",
   "price": "Price",
   "awaiting_pricing_information": "Awaiting pricing information.",
-  "type_your_message": "Type your message...",
-  "send": "Send"
+  "add_grading_certificate": "Add Grading Certificate",
+  "generate_quality_certificate": "Generate Quality Certificate",
+  "for_batch": "For Batch:",
+  "final_grade": "Final Grade",
+  "quality_standards_met": "Quality Standards Met",
+  "e_g_usda_organic_iso_22000": "e.g., USDA Organic, ISO 22000",
+  "generate_certificate": "Generate Certificate",
+  "certificate_generated_successfully": "Certificate generated successfully!",
+  "view_certificate": "View Certificate",
+  "quality_certificate": "Quality Certificate",
+  "batch_name": "Batch Name",
+  "grade": "Grade",
+  "quality_standards": "Quality Standards",
+  "issue_date": "Issue Date",
+  "issued_by": "Issued By",
+  "certificate_hash": "Certificate Hash",
+  "close": "Close",
+  "no_grading_certificate": "No grading certificate has been generated for this batch yet.",
+  "issued_on": "Issued on",
+  "standards": "Standards",
+  "digital_receipt": "Digital Receipt",
+  "receipt_hash": "Receipt Hash",
+  "transferred_from_to": "Transferred from {from} to {to}",
+  "AtFarm": "At Farm",
+  "InTransit": "In Transit",
+  "AtRetailer": "At Retailer",
+  "Sold": "Sold",
+  "view_source_details": "View Source Details",
+  "details_not_found": "Could not load batch details."
 }
