--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -17,12 +17,9 @@
   "harvest_location": "कटाई का स्थान",
   "harvest_location_placeholder": "उदा., सलिनास, सीए",
   "harvest_date": "कटाई की तारीख",
-  "quality_grade": "गुणवत्ता ग्रेड",
+  "quality_grade": "प्रारंभिक गुणवत्ता ग्रेड",
   "quality_grade_placeholder": "उदा., ग्रेड ए, प्रीमियम",
   "create_batch": "बैच बनाएं",
-  "create_with_ai_assistant": "एआई सहायक के साथ बनाएं",
-  "ai_assistant": "एआई सहायक",
-  "assistant_coming_soon": "आवाज सहायक जल्द ही आ रहा है...",
   "my_batches": "मेरे बैच",
   "my_batches_description": "आपके द्वारा बनाए गए सभी उपज बैचों की एक सूची।",
   "no_batches_created_yet": "अभी तक कोई बैच नहीं बनाया गया है।",
@@ -35,11 +32,19 @@
   "error": "त्रुटि",
   "success": "सफलता",
   "new_batch_created_successfully": "नया बैच सफलतापूर्वक बनाया गया!",
-  "claim_batch": "बैच का दावा करें",
-  "claim_batch_description": "किसान से दावा करने के लिए एक बैच आईडी दर्ज करें।",
+  "claim_batch_and_generate_receipt": "बैच का दावा करें और रसीद बनाएं",
+  "claim_batch_receipt_description": "बैच आईडी और परिवहन विवरण दर्ज करके दावा करें और एक डिजिटल रसीद बनाएं।",
+  "batch_id": "बैच आईडी",
   "enter_batch_id_placeholder": "बैच आईडी दर्ज करें...",
-  "claim": "दावा",
-  "batch_claimed_successfully": "बैच का सफलतापूर्वक दावा किया गया!",
+  "transport_details": "परिवहन विवरण",
+  "transport_mode": "परिवहन का तरीका",
+  "e_g_truck_train": "उदा., ट्रक, ट्रेन",
+  "vehicle_number": "वाहन संख्या",
+  "e_g_ca_1234_xy": "उदा., CA-1234-XY",
+  "driver_name": "ड्राइवर का नाम",
+  "e_g_john_smith": "उदा., जॉन स्मिथ",
+  "claim_and_generate": "दावा करें और बनाएं",
+  "batch_claimed_successfully": "बैच का सफलतापूर्वक दावा किया गया और रसीद बनाई गई!",
   "my_inventory": "मेरी इन्वेंट्री",
   "my_inventory_description_distributor": "बैच जो आपके पास वर्तमान में पारगमन में हैं।",
   "no_batches_in_inventory": "आपकी इन्वेंट्री में कोई बैच नहीं है।",
@@ -66,10 +71,10 @@
   "supply_chain_journey": "आपूर्ति श्रृंखला यात्रा",
   "current_status": "वर्तमान स्थिति",
   "verification": "सत्यापन",
-  "blockchain_hash": "ब्लॉकचेन हैश",
+  "blockchain_hash": "बैच मेटाडेटा हैश",
   "harvested_by": "द्वारा काटा गया",
   "location": "स्थान",
-  "quality": "गुणवत्ता",
+  "quality": "गुणवत्ता ग्रेड",
   "transferred_to": "को स्थानांतरित",
   "handled_by": "द्वारा संभाला गया",
   "date": "तारीख",
@@ -78,6 +83,33 @@
   "price_set_on": "पर मूल्य निर्धारित",
   "price": "कीमत",
   "awaiting_pricing_information": "मूल्य निर्धारण जानकारी की प्रतीक्षा है।",
-  "type_your_message": "अपना संदेश टाइप करें...",
-  "send": "भेजें"
+  "add_grading_certificate": "ग्रेडिंग प्रमाणपत्र जोड़ें",
+  "generate_quality_certificate": "गुणवत्ता प्रमाणपत्र बनाएं",
+  "for_batch": "बैच के लिए:",
+  "final_grade": "अंतिम ग्रेड",
+  "quality_standards_met": "गुणवत्ता मानक पूरे हुए",
+  "e_g_usda_organic_iso_22000": "उदा., USDA ऑर्गेनिक, ISO 22000",
+  "generate_certificate": "प्रमाणपत्र बनाएं",
+  "certificate_generated_successfully": "प्रमाणपत्र सफलतापूर्वक बनाया गया!",
+  "view_certificate": "प्रमाणपत्र देखें",
+  "quality_certificate": "गुणवत्ता प्रमाणपत्र",
+  "batch_name": "बैच का नाम",
+  "grade": "ग्रेड",
+  "quality_standards": "गुणवत्ता मानक",
+  "issue_date": "जारी करने की तारीख",
+  "issued_by": "द्वारा जारी",
+  "certificate_hash": "प्रमाणपत्र हैश",
+  "close": "बंद करें",
+  "no_grading_certificate": "इस बैच के लिए अभी तक कोई ग्रेडिंग प्रमाणपत्र नहीं बनाया गया है।",
+  "issued_on": "जारी करने की तारीख",
+  "standards": "मानक",
+  "digital_receipt": "डिजिटल रसीद",
+  "receipt_hash": "रसीद हैश",
+  "transferred_from_to": "{from} से {to} में स्थानांतरित",
+  "AtFarm": "खेत पर",
+  "InTransit": "पारगमन में",
+  "AtRetailer": "फुटकर विक्रेता पर",
+  "Sold": "बिक गया",
+  "view_source_details": "स्रोत विवरण देखें",
+  "details_not_found": "बैच विवरण लोड नहीं किया जा सका।"
 }
