--- a/src/locales/mr.json
+++ b/src/locales/mr.json
@@ -17,12 +17,9 @@
   "harvest_location": "कापणीचे ठिकाण",
   "harvest_location_placeholder": "उदा., सलिनास, सीए",
   "harvest_date": "कापणीची तारीख",
-  "quality_grade": "गुणवत्तेचा दर्जा",
+  "quality_grade": "प्राथमिक गुणवत्ता दर्जा",
   "quality_grade_placeholder": "उदा., ग्रेड ए, प्रीमियम",
   "create_batch": "बॅच तयार करा",
-  "create_with_ai_assistant": "एआय सहाय्यकासह तयार करा",
-  "ai_assistant": "एआय सहाय्यक",
-  "assistant_coming_soon": "व्हॉइस सहाय्यक लवकरच येत आहे...",
   "my_batches": "माझे बॅच",
   "my_batches_description": "तुम्ही तयार केलेल्या सर्व उत्पादन बॅचची सूची.",
   "no_batches_created_yet": "अद्याप कोणतेही बॅच तयार केलेले नाहीत.",
@@ -35,11 +32,19 @@
   "error": "त्रुटी",
   "success": "यशस्वी",
   "new_batch_created_successfully": "नवीन बॅच यशस्वीरित्या तयार झाला!",
-  "claim_batch": "बॅचवर दावा करा",
-  "claim_batch_description": "शेतकऱ्याकडून दावा करण्यासाठी बॅच आयडी प्रविष्ट करा.",
+  "claim_batch_and_generate_receipt": "बॅचवर दावा करा आणि पावती तयार करा",
+  "claim_batch_receipt_description": "बॅच आयडी आणि वाहतुकीचा तपशील प्रविष्ट करून त्यावर दावा करा आणि डिजिटल पावती तयार करा.",
+  "batch_id": "बॅच आयडी",
   "enter_batch_id_placeholder": "बॅच आयडी प्रविष्ट करा...",
-  "claim": "दावा",
-  "batch_claimed_successfully": "बॅचवर यशस्वीरित्या दावा केला!",
+  "transport_details": "वाहतुकीचा तपशील",
+  "transport_mode": "वाहतुकीचा प्रकार",
+  "e_g_truck_train": "उदा., ट्रक, ट्रेन",
+  "vehicle_number": "वाहन क्रमांक",
+  "e_g_ca_1234_xy": "उदा., CA-1234-XY",
+  "driver_name": "ड्रायव्हरचे नाव",
+  "e_g_john_smith": "उदा., जॉन स्मिथ",
+  "claim_and_generate": "दावा करा आणि तयार करा",
+  "batch_claimed_successfully": "बॅचवर यशस्वीरित्या दावा केला आणि पावती तयार झाली!",
   "my_inventory": "माझी यादी",
   "my_inventory_description_distributor": "तुमच्याकडे सध्या संक्रमणात असलेले बॅच.",
   "no_batches_in_inventory": "तुमच्या यादीमध्ये कोणतेही बॅच नाहीत.",
@@ -66,10 +71,10 @@
   "supply_chain_journey": "पुरवठा साखळी प्रवास",
   "current_status": "सद्यस्थिती",
   "verification": "पडताळणी",
-  "blockchain_hash": "ब्लॉकचेन हॅश",
+  "blockchain_hash": "बॅच मेटाडेटा हॅश",
   "harvested_by": "यांनी कापणी केली",
   "location": "ठिकाण",
-  "quality": "गुणवत्ता",
+  "quality": "गुणवत्ता दर्जा",
   "transferred_to": "कडे हस्तांतरित",
   "handled_by": "यांनी हाताळले",
   "date": "तारीख",
@@ -78,6 +83,33 @@
   "price_set_on": "वर किंमत सेट केली",
   "price": "किंमत",
   "awaiting_pricing_information": "किंमत माहितीची प्रतीक्षा आहे.",
-  "type_your_message": "तुमचा संदेश टाइप करा...",
-  "send": "पाठवा"
+  "add_grading_certificate": "ग्रेडिंग प्रमाणपत्र जोडा",
+  "generate_quality_certificate": "गुणवत्ता प्रमाणपत्र तयार करा",
+  "for_batch": "बॅचसाठी:",
+  "final_grade": "अंतिम ग्रेड",
+  "quality_standards_met": "गुणवत्ता मानके पूर्ण",
+  "e_g_usda_organic_iso_22000": "उदा., USDA ऑरगॅनिक, ISO 22000",
+  "generate_certificate": "प्रमाणपत्र तयार करा",
+  "certificate_generated_successfully": "प्रमाणपत्र यशस्वीरित्या तयार झाले!",
+  "view_certificate": "प्रमाणपत्र पहा",
+  "quality_certificate": "गुणवत्ता प्रमाणपत्र",
+  "batch_name": "बॅचचे नाव",
+  "grade": "ग्रेड",
+  "quality_standards": "गुणवत्ता मानके",
+  "issue_date": "जारी करण्याची तारीख",
+  "issued_by": "यांनी जारी केले",
+  "certificate_hash": "प्रमाणपत्र हॅश",
+  "close": "बंद करा",
+  "no_grading_certificate": "या बॅचसाठी अद्याप कोणतेही ग्रेडिंग प्रमाणपत्र तयार केलेले नाही.",
+  "issued_on": "जारी करण्याची तारीख",
+  "standards": "मानके",
+  "digital_receipt": "डिजिटल पावती",
+  "receipt_hash": "पावती हॅश",
+  "transferred_from_to": "{from} पासून {to} कडे हस्तांतरित",
+  "AtFarm": "शेतावर",
+  "InTransit": "संक्रमणात",
+  "AtRetailer": "किरकोळ विक्रेत्याकडे",
+  "Sold": "विकले",
+  "view_source_details": "स्रोत तपशील पहा",
+  "details_not_found": "बॅच तपशील लोड होऊ शकले नाहीत."
 }
