--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -17,12 +17,9 @@
   "harvest_location": "அறுவடை இடம்",
   "harvest_location_placeholder": "எ.கா., சலினாஸ், சிஏ",
   "harvest_date": "அறுவடை தேதி",
-  "quality_grade": "தர நிலை",
+  "quality_grade": "ஆரம்ப தர நிலை",
   "quality_grade_placeholder": "எ.கா., கிரேடு ஏ, பிரீமியம்",
   "create_batch": "தொகுதியை உருவாக்கவும்",
-  "create_with_ai_assistant": "AI உதவியாளருடன் உருவாக்கவும்",
-  "ai_assistant": "AI உதவியாளர்",
-  "assistant_coming_soon": "குரல் உதவியாளர் விரைவில்...",
   "my_batches": "எனது தொகுதிகள்",
   "my_batches_description": "நீங்கள் உருவாக்கிய அனைத்து உற்பத்தித் தொகுதிகளின் பட்டியல்.",
   "no_batches_created_yet": "இன்னும் தொகுதிகள் உருவாக்கப்படவில்லை.",
@@ -35,11 +32,19 @@
   "error": "பிழை",
   "success": "வெற்றி",
   "new_batch_created_successfully": "புதிய தொகுதி வெற்றிகரமாக உருவாக்கப்பட்டது!",
-  "claim_batch": "தொகுதியைக் கோரவும்",
-  "claim_batch_description": "ஒரு விவசாயியிடமிருந்து அதைக் கோர ஒரு தொகுதி ஐடியை உள்ளிடவும்.",
+  "claim_batch_and_generate_receipt": "தொகுதியைக் கோரி ரசீதை உருவாக்கவும்",
+  "claim_batch_receipt_description": "தொகுதி ஐடி மற்றும் போக்குவரத்து விவரங்களை உள்ளிட்டு அதைக் கோரி டிஜிட்டல் ரசீதை உருவாக்கவும்.",
+  "batch_id": "தொகுதி ஐடி",
   "enter_batch_id_placeholder": "தொகுதி ஐடியை உள்ளிடவும்...",
-  "claim": "கோரிக்கை",
-  "batch_claimed_successfully": "தொகுதி வெற்றிகரமாக கோரப்பட்டது!",
+  "transport_details": "போக்குவரத்து விவரங்கள்",
+  "transport_mode": "போக்குவரத்து முறை",
+  "e_g_truck_train": "எ.கா., டிரக், ரயில்",
+  "vehicle_number": "வாகன எண்",
+  "e_g_ca_1234_xy": "எ.கா., CA-1234-XY",
+  "driver_name": "ஓட்டுநர் பெயர்",
+  "e_g_john_smith": "எ.கா., ஜான் ஸ்மித்",
+  "claim_and_generate": "கோரிக்கை & உருவாக்கு",
+  "batch_claimed_successfully": "தொகுதி வெற்றிகரமாக கோரப்பட்டு ரசீது உருவாக்கப்பட்டது!",
   "my_inventory": "எனது இருப்பு",
   "my_inventory_description_distributor": "நீங்கள் தற்போது கொண்டு செல்லும் தொகுதிகள்.",
   "no_batches_in_inventory": "உங்கள் இருப்பில் தொகுதிகள் எதுவும் இல்லை.",
@@ -66,10 +71,10 @@
   "supply_chain_journey": "விநியோகச் சங்கிலிப் பயணம்",
   "current_status": "தற்போதைய நிலை",
   "verification": "சரிபார்ப்பு",
-  "blockchain_hash": "பிளாக்செயின் ஹேஷ்",
+  "blockchain_hash": "தொகுதி மெட்டாடேட்டா ஹேஷ்",
   "harvested_by": "அறுவடை செய்தது",
   "location": "இடம்",
-  "quality": "தரம்",
+  "quality": "தர நிலை",
   "transferred_to": "க்கு மாற்றப்பட்டது",
   "handled_by": "கையாளப்பட்டது",
   "date": "தேதி",
@@ -78,6 +83,33 @@
   "price_set_on": "விலை நிர்ணயிக்கப்பட்டது",
   "price": "விலை",
   "awaiting_pricing_information": "விலை நிர்ணய தகவலுக்காக காத்திருக்கிறது.",
-  "type_your_message": "உங்கள் செய்தியைத் தட்டச்சு செய்க...",
-  "send": "அனுப்பு"
+  "add_grading_certificate": "தரச் சான்றிதழைச் சேர்க்கவும்",
+  "generate_quality_certificate": "தரச் சான்றிதழை உருவாக்கவும்",
+  "for_batch": "தொகுதிக்காக:",
+  "final_grade": "இறுதித் தரம்",
+  "quality_standards_met": "தரத் தரநிலைகள் பூர்த்தி செய்யப்பட்டன",
+  "e_g_usda_organic_iso_22000": "எ.கா., USDA ஆர்கானிக், ISO 22000",
+  "generate_certificate": "சான்றிதழை உருவாக்கவும்",
+  "certificate_generated_successfully": "சான்றிதழ் வெற்றிகரமாக உருவாக்கப்பட்டது!",
+  "view_certificate": "சான்றிதழைப் பார்க்கவும்",
+  "quality_certificate": "தரச் சான்றிதழ்",
+  "batch_name": "தொகுதிப் பெயர்",
+  "grade": "தரம்",
+  "quality_standards": "தரத் தரநிலைகள்",
+  "issue_date": "வெளியீட்டுத் தேதி",
+  "issued_by": "வெளியிட்டவர்",
+  "certificate_hash": "சான்றிதழ் ஹேஷ்",
+  "close": "மூடு",
+  "no_grading_certificate": "இந்த தொகுதிக்கு இன்னும் தரச் சான்றிதழ் உருவாக்கப்படவில்லை.",
+  "issued_on": "வெளியிடப்பட்டது",
+  "standards": "தரநிலைகள்",
+  "digital_receipt": "டிஜிட்டல் ரசீது",
+  "receipt_hash": "ரசீது ஹேஷ்",
+  "transferred_from_to": "{from} இலிருந்து {to} க்கு மாற்றப்பட்டது",
+  "AtFarm": "பண்ணையில்",
+  "InTransit": "வழியில்",
+  "AtRetailer": "சில்லறை விற்பனையாளரிடம்",
+  "Sold": "விற்கப்பட்டது",
+  "view_source_details": "மூல விவரங்களைக் காண்க",
+  "details_not_found": "தொகுதி விவரங்களை ஏற்ற முடியவில்லை."
 }
