--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -17,12 +17,9 @@
   "harvest_location": "పంట కోత ప్రదేశం",
   "harvest_location_placeholder": "ఉదా., సాలినాస్, CA",
   "harvest_date": "పంట కోత తేదీ",
-  "quality_grade": "నాణ్యత గ్రేడ్",
+  "quality_grade": "ప్రారంభ నాణ్యత గ్రేడ్",
   "quality_grade_placeholder": "ఉదా., గ్రేడ్ ఎ, ప్రీమియం",
   "create_batch": "బ్యాచ్‌ను సృష్టించండి",
-  "create_with_ai_assistant": "AI అసిస్టెంట్‌తో సృష్టించండి",
-  "ai_assistant": "AI అసిస్టెంట్",
-  "assistant_coming_soon": "వాయిస్ అసిస్టెంట్ త్వరలో వస్తుంది...",
   "my_batches": "నా బ్యాచ్‌లు",
   "my_batches_description": "మీరు సృష్టించిన అన్ని ఉత్పత్తి బ్యాచ్‌ల జాబితా.",
   "no_batches_created_yet": "ఇంకా బ్యాచ్‌లు సృష్టించబడలేదు.",
@@ -35,11 +32,19 @@
   "error": "లోపం",
   "success": "విజయం",
   "new_batch_created_successfully": "కొత్త బ్యాచ్ విజయవంతంగా సృష్టించబడింది!",
-  "claim_batch": "బ్యాచ్‌ను క్లెయిమ్ చేయండి",
-  "claim_batch_description": "ఒక రైతు నుండి దానిని క్లెయిమ్ చేయడానికి బ్యాచ్ ఐడిని నమోదు చేయండి.",
+  "claim_batch_and_generate_receipt": "బ్యాచ్‌ను క్లెయిమ్ చేయండి & రశీదును రూపొందించండి",
+  "claim_batch_receipt_description": "దాన్ని క్లెయిమ్ చేయడానికి మరియు డిజిటల్ రశీదును రూపొందించడానికి బ్యాచ్ ఐడి మరియు రవాణా వివరాలను నమోదు చేయండి.",
+  "batch_id": "బ్యాచ్ ఐడి",
   "enter_batch_id_placeholder": "బ్యాచ్ ఐడిని నమోదు చేయండి...",
-  "claim": "క్లెయిమ్",
-  "batch_claimed_successfully": "బ్యాచ్ విజయవంతంగా క్లెయిమ్ చేయబడింది!",
+  "transport_details": "రవాణా వివరాలు",
+  "transport_mode": "రవాణా విధానం",
+  "e_g_truck_train": "ఉదా., ట్రక్, రైలు",
+  "vehicle_number": "వాహనం నంబర్",
+  "e_g_ca_1234_xy": "ఉదా., CA-1234-XY",
+  "driver_name": "డ్రైవర్ పేరు",
+  "e_g_john_smith": "ఉదా., జాన్ స్మిత్",
+  "claim_and_generate": "క్లెయిమ్ & రూపొందించండి",
+  "batch_claimed_successfully": "బ్యాచ్ విజయవంతంగా క్లెయిమ్ చేయబడింది మరియు రశీదు రూపొందించబడింది!",
   "my_inventory": "నా ఇన్వెంటరీ",
   "my_inventory_description_distributor": "మీరు ప్రస్తుతం రవాణాలో ఉన్న బ్యాచ్లు.",
   "no_batches_in_inventory": "మీ ఇన్వెంటరీలో బ్యాచ్‌లు లేవు.",
@@ -66,10 +71,10 @@
   "supply_chain_journey": "సరఫరా గొలుసు ప్రయాణం",
   "current_status": "ప్రస్తుత స్థితి",
   "verification": "ధృవీకరణ",
-  "blockchain_hash": "బ్లాక్‌చెయిన్ హాష్",
+  "blockchain_hash": "బ్యాచ్ మెటాడేటా హాష్",
   "harvested_by": "పంట కోసింది",
   "location": "ప్రదేశం",
-  "quality": "నాణ్యత",
+  "quality": "నాణ్యత గ్రేడ్",
   "transferred_to": "కి బదిలీ చేయబడింది",
   "handled_by": "నిర్వహించింది",
   "date": "తేదీ",
@@ -78,6 +83,33 @@
   "price_set_on": "న ధర సెట్ చేయబడింది",
   "price": "ధర",
   "awaiting_pricing_information": "ధరల సమాచారం కోసం వేచి ఉంది.",
-  "type_your_message": "మీ సందేశాన్ని టైప్ చేయండి...",
-  "send": "పంపు"
+  "add_grading_certificate": "గ్రేడింగ్ సర్టిఫికేట్‌ను జోడించండి",
+  "generate_quality_certificate": "నాణ్యత సర్టిఫికేట్‌ను రూపొందించండి",
+  "for_batch": "బ్యాచ్ కోసం:",
+  "final_grade": "చివరి గ్రేడ్",
+  "quality_standards_met": "నాణ్యత ప్రమాణాలు నెరవేరాయి",
+  "e_g_usda_organic_iso_22000": "ఉదా., USDA ఆర్గానిక్, ISO 22000",
+  "generate_certificate": "సర్టిఫికేట్‌ను రూపొందించండి",
+  "certificate_generated_successfully": "సర్టిఫికేట్ విజయవంతంగా రూపొందించబడింది!",
+  "view_certificate": "సర్టిఫికేట్‌ను వీక్షించండి",
+  "quality_certificate": "నాణ్యత సర్టిఫికేట్",
+  "batch_name": "బ్యాచ్ పేరు",
+  "grade": "గ్రేడ్",
+  "quality_standards": "నాణ్యత ప్రమాణాలు",
+  "issue_date": "జారీ తేదీ",
+  "issued_by": "జారీ చేసింది",
+  "certificate_hash": "సర్టిఫికేట్ హాష్",
+  "close": "మూసివేయి",
+  "no_grading_certificate": "ఈ బ్యాచ్ కోసం ఇంకా గ్రేడింగ్ సర్టిఫికేట్ రూపొందించబడలేదు.",
+  "issued_on": "జారీ చేయబడింది",
+  "standards": "ప్రమాణాలు",
+  "digital_receipt": "డిజిటల్ రశీదు",
+  "receipt_hash": "రశీదు హాష్",
+  "transferred_from_to": "{from} నుండి {to}కి బదిలీ చేయబడింది",
+  "AtFarm": "పొలంలో",
+  "InTransit": "రవాణాలో",
+  "AtRetailer": "చిల్లర వ్యాపారి వద్ద",
+  "Sold": "అమ్మబడింది",
+  "view_source_details": "మూల వివరాలను వీక్షించండి",
+  "details_not_found": "బ్యాచ్ వివరాలను లోడ్ చేయడం సాధ్యపడలేదు."
 }
